# fancon

./: CHANGELOG.md  README.md  cabal.project.freeze  fancon.cabal  hie.yaml  invalid.asm.fancon  module.asm.fancon  valid.asm.fancon
lib/: Fancon.hs
lib/Fancon/: Assemble.hs  AssembleAlt.hs  Bus.hs  CPU.hs  Emit.hs  Instruction.hs  Link.hs  Location.hs  Memory.hs  Parse.hs  Symboltable.hs
lib/Fancon/Instruction/: Internal.hs  Validate.hs
lib/Fancon/Symboltable/: Validation.hs
src/: Arguments.hs  Main.hs
src/Fancon/: Assemble.hs  Emit.hs  Instruction.hs  Memory.hs  Parse.hs  Symboltable.hs
src/Fancon/Instruction/: Internal.hs  Validate.hs
test/: Main.hs
