cabal-version:      2.2
name:               fancon
version:            0.0.0.1
homepage:           https://github.com/Anrock/fancon#readme
build-type:         Simple
extra-source-files: README.md

common warnings
  ghc-options: -Weverything
               -Wno-missing-exported-signatures
               -Wmissing-signatures
               -Wno-implicit-prelude
               -Wno-missing-import-lists
               -Wno-missed-specialisations
               -Wno-all-missed-specialisations
               -Wno-unsafe
               -Wno-safe
               -Wno-missing-local-signatures
               -Wno-monomorphism-restriction

common ghc-options
  ghc-options: -O2 -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin

common language
  default-language: Haskell2010
  default-extensions:   QuasiQuotes
                      , OverloadedStrings
                      , OverloadedLists
                      , TupleSections
                      , NamedFieldPuns
                      , DuplicateRecordFields
                      , NamedFieldPuns
                      , LambdaCase
                      , DataKinds
                      , FlexibleContexts
                      , GADTs
                      , PolyKinds
                      , RankNTypes
                      , ScopedTypeVariables
                      , TypeApplications
                      , TypeOperators
                      , TypeFamilies
                      , TemplateHaskell
                      , BinaryLiterals
                      , NumericUnderscores
                      , BlockArguments
                      , RecordWildCards

common deps
  build-depends:   base >= 4.7 && < 5
                 , array
                 , containers
                 , megaparsec
                 , polysemy
                 , polysemy-plugin
                 , bytestring
                 , yaml
                 , text
                 , interpolate

library
  import: warnings, ghc-options, language, deps
  hs-source-dirs:   lib
  exposed-modules:  Fancon
  other-modules:    Fancon.Memory
                  , Fancon.Instruction
                  , Fancon.Instruction.Internal
                  , Fancon.Instruction.Validate
                  , Fancon.Emit
                  , Fancon.Parse
                  , Fancon.Assemble
                  , Fancon.Symboltable
                  , Fancon.Link

executable fancon
  import: ghc-options, warnings, language, deps
  hs-source-dirs:   src
  main-is:          Main.hs
  ghc-options:      -threaded
  build-depends:    fancon
