cabal-version:      2.2
name:               fancon
version:            0.0.0.1
homepage:           https://github.com/Anrock/fancon#readme
build-type:         Simple
extra-source-files: README.md

common warnings
  ghc-options: -Weverything
               -Wno-missing-exported-signatures
               -Wmissing-signatures
               -Wno-implicit-prelude
               -Wno-missing-import-lists
               -Wno-missed-specialisations
               -Wno-all-missed-specialisations
               -Wno-unsafe
               -Wno-safe
               -Wno-missing-local-signatures
               -Wno-monomorphism-restriction

common ghc-options
  ghc-options: -O2

common polysemy
  ghc-options: -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
  build-depends: polysemy
               , polysemy-plugin
  default-extensions: DataKinds
                    , FlexibleContexts
                    , GADTs
                    , LambdaCase
                    , PolyKinds
                    , RankNTypes
                    , ScopedTypeVariables
                    , TypeApplications
                    , TypeOperators
                    , TypeFamilies

common language
  default-language: Haskell2010
  default-extensions:   QuasiQuotes
                      , OverloadedStrings
                      , OverloadedLists
                      , TupleSections
                      , NamedFieldPuns
                      , DuplicateRecordFields
                      , NamedFieldPuns
                      , LambdaCase
                      , TemplateHaskell
                      , BinaryLiterals
                      , NumericUnderscores
                      , BlockArguments
                      , RecordWildCards

common deps
  build-depends:   base >= 4.7 && < 5
                 , array
                 , containers
                 , megaparsec
                 , polysemy
                 , polysemy-plugin
                 , bytestring
                 , yaml
                 , text
                 , interpolate

library
  import: warnings, ghc-options, language, deps, polysemy
  hs-source-dirs:   lib
  exposed-modules: Fancon
                 , Fancon.Assemble
  other-modules: Fancon.Memory
               , Fancon.Instruction
               , Fancon.Instruction.Internal
               , Fancon.Instruction.Validate
               , Fancon.Emit
               , Fancon.Parse
               , Fancon.Symboltable
               , Fancon.Symboltable.Validation
               , Fancon.Link

test-suite test
  import: warnings, ghc-options, language
  ghc-options:    -threaded
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:  base, fancon, tasty, tasty-hunit, array, bytestring, text

executable fancon
  import:         ghc-options, warnings, language, deps, polysemy
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -threaded
  build-depends:  fancon, optparse-applicative
  other-modules:  Arguments
